# test_zeromq

./: README.md
client/: index.js  server.js
include/: socket_config.hpp
server/: CMakeLists.txt  dummy_client.cc  dummy_server.cc  dummy_server.h
